Fixing spacing

--- a/static/CSS/about.css
+++ b/static/CSS/about.css
@@ -2,8 +2,8 @@ p{
   font-size: 16pt;
   font-family: 'Share Tech Mono', monospace;
   color: #00ff66;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 ul.nav_bar {
